--- a/style_5000.css
+++ b/style_5000.css
@@ -22,7 +22,7 @@ h1{
   font-size: 24px;
   position: absolute;
   text-align: center;
-  top: -70px
+  top: -70px;
 }
 .function{
   text-align: center;
