--- a/style_5000.css
+++ b/style_5000.css
@@ -22,7 +22,12 @@ h1{
   font-size: 24px;
   position: absolute;
   text-align: center;
-  top: -70px;
+}
+.line1{
+  top: -80px;
+}
+.line2{
+  top: -65px;
 }
 .function{
   text-align: center;
